--- a/AutomationFramework/pom.xml
+++ b/AutomationFramework/pom.xml
@@ -49,6 +49,12 @@
 			<version>5.0.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version> <!-- Use the latest version -->
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
