--- a/AutomationFramework/pom.xml
+++ b/AutomationFramework/pom.xml
@@ -48,6 +48,8 @@
 			<artifactId>extentreports</artifactId>
 			<version>5.0.9</version>
 		</dependency>
+		
+		<!-- This dependency  to fix jenkins -->
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
